[package]
name = "srb2discb"
authors = ["gm3k4g <thingstuffet@gmail.com>"]
description = "`srb2discb` is designed to connect to a Discord bot, and allow for the monitoring of [an] SRB2 server(s), with a slew of tools at hand."
keywords = ["discord", "srb2"]
homepage = "https://github.com/gm3k4g/srb2discb"
license = "MIT"
version = "1.1.0"
edition = "2021"

# Yes, I have to probably not use asterisks here (due to semver breaking)..
[dependencies]
serenity 		= { version= "0.12", features = ["builder", "framework", "standard_framework", "client", "gateway","rustls_backend", "model", "cache"], default-features = false }
tokio 			= { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json 		= "1.0.108"
home 			= "0.5.5"

#tokio 			= { version = "*", features = ["rt-multi-thread", "macros"] }
#serenity 		= { version = "*", features = ["framework", "standard_framework", "rustls_backend"] }